<resources>
    <string name="app_name">Que Comemos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //Button
    <string name="btn_rapidas">Rápidas</string>
    <string name="btn_veganas">Veganas</string>
    <string name="btn_carnes">Carnes</string>
    <string name="btn_pescados">Pescados</string>
    <string name="btn_saludables">Saludables</string>
    <string name="btn_gourmet">Gourmet</string>
    <string name="btn_postres">Postres</string>
    <string name="btn_pastas">Pastas</string>
    <string name="btn_economicas">Económicas</string>
    <string name="btn_quecomemos">¿Qué Comemos?</string>
    //Copyright
    <string name="by">by Carlos Ramundo - Android Developer</string>
    <string name="copyright"> - @copyright - 2021</string>
    //ej og recipe
    <string name="name_recipe">Nombre de la receta</string>
    <string name="photo_recipe">Foto de la receta</string>
    <string name="ingredients">Ingredientes</string>
    <string name="ej_recipe_ingredients">
        *1g de alegria
        *2g de salud
        *3g de amor</string>
    <string name="recipe_description">Proceso de elaboración...Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>