<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        tools:ignore="ImageContrastCheck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="4dp"
            android:gravity="center">
            <Button
                android:id="@+id/btn_saludables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_saludables"/>
            <Button
                android:id="@+id/btn_pastas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_pastas"/>
            <Button
                android:id="@+id/btn_rapidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_rapidas"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="4dp"
            android:gravity="center">
            <Button
                android:id="@+id/btn_veganas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_veganas"/>
            <Button
                android:id="@+id/btn_carnes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_carnes"/>
            <Button
                android:id="@+id/btn_economicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_economicas"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/btn_gourmet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_gourmet"/>
            <Button
                android:id="@+id/btn_pescados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_pescados"/>
            <Button
                android:id="@+id/btn_postres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_postres"/>
        </LinearLayout>
         </LinearLayout>
    <Button
        android:id="@+id/btn_quecomemos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/btn_quecomemos"/>

</LinearLayout>